Fix alignment of stakeout labels; closes #7

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,10 @@ label {
 	width: 5em;
 }
 
+#takeShotForm label {
+	width: 7em;
+}
+
 #setAtmosphericConditionsForm>label,
 #setPrismOffsetsForm label,
 #saveNewStationForm label {
